# qemcmc_new

./: .gitignore  Justfile  README.md  jupytext.toml  pyproject.toml  requirements-dev.txt  requirements.txt
assets/graphs/: aves-sparrow-social.gph  ibm32.gph
examples/: ex_build_proposer.py  ex_evolved_statevector.py  ex_graphs_builders.py  ex_graphs_pipeline.py  ex_mixer_op.py  ex_model.py  ex_prepare_state.py  ex_problem_op.py  ex_random_model.py
examples/workflows/: mis_optimize.ipynb  mis_optimize.py  mis_path_graph.ipynb  mis_path_graph.py  optimize_prog.py
src/qemcmc/: __init__.py  circuits_core.py  energy_model.py  graphs.py  optimize.py  paths.py  qiskit_utils.py  random_models.py  utils.py
tests/: test_circuits_core.py  test_edge_errors.py  test_energy_model.py  test_graphs.py  test_io_energy_model.py  test_random_pairwise_model.py  test_roundtrip_qubo_ising.py
