[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qemcmc"
version = "0.1.0"
description = "Sparse Ising energy model and QeMCMC utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "John Lapeyre" }]
dependencies = ["numpy>=1.22"]

[tool.setuptools.packages.find]
where = ["src"]
